package org.exercise.furniture.store;

public interface Chair {
    String getMaterial();

    void setMaterial(String m);
}
