package org.exercise.furniture.store;

public interface CoffeeTable {

    int getWeight();
    void setWeight(int w);
}
