package org.exercise.furniture.store;

import lombok.Setter;
import lombok.Getter;

@Getter
@Setter
public class ModernChair implements Chair{
    private String material;
}
