package org.exercise.furniture.store;

import lombok.Getter;
import lombok.Setter;

@Getter
@Setter
public class ModernCoffeeTable implements CoffeeTable{
    private int Weight;
}
