package org.exercise.furniture.store;

import lombok.Getter;
import lombok.Setter;

@Getter
@Setter
public class ModernSofa implements Sofa {
    private String color;
}
