package org.exercise.furniture.store;

public interface Sofa {
    String getColor();
    void setColor(String c);
}
