package org.exercise.furniture.store;

import lombok.Getter;
import lombok.Setter;

@Getter
@Setter
public class VictorianChair implements Chair {
    private String material;
}
