package org.exercise.furniture.store;

import lombok.Getter;
import lombok.Setter;

@Getter
@Setter
public class VictorianSofa implements Sofa {
    private String color;
}
